// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformMarkdown > transform relative links 1`] = `
"# Project Documentation

## Getting Started

Please review our [installation guide](https://github.com/luxass/vsix-utils/blob/HEAD/docs/installation.md) before proceeding to the [quick start tutorial](https://github.com/luxass/vsix-utils/blob/HEAD/docs/quickstart.md).

Visit our repositories on [GitHub (HTTPS)](https://github.com/example/project) or [GitHub (HTTP)](http://github.com/example/project-mirror).

Check out our [partner projects](https://github.com/luxass/vsix-utils/blob/HEAD/partners/index.md).

## Project Structure

\`\`\`
project/
├── docs/
│   ├── installation.md
│   └── quickstart.md
├── assets/
│   ├── images/
│   │   └── logo.png
│   └── videos/
│       └── demo.mp4
└── src/
    └── components/
\`\`\`

## Documentation

Our documentation is split into several sections:

- [API Reference](https://github.com/luxass/vsix-utils/blob/HEAD/docs/api/index.md)
- [Component Library](https://github.com/luxass/vsix-utils/blob/HEAD/src/components/README.md)
- [Contributing Guidelines](https://github.com/luxass/vsix-utils/blob/HEAD/CONTRIBUTING.md)
- [Code of Conduct](https://example.com/code-of-conduct)

## Media Examples

### Images

Here's our project logo:
![Project Logo](https://github.com/luxass/vsix-utils/raw/HEAD/assets/images/logo.png)

Some examples using HTML img tags:

<img src="https://github.com/luxass/vsix-utils/raw/HEAD/assets/images/screenshot1.png" alt="Screenshot 1" width="600">
<img src="https://github.com/luxass/vsix-utils/raw/HEAD/assets/images/banner.jpg" alt="Banner" width="800">
<img src="https://example.com/images/team.jpg" alt="Team Photo">

### Videos

Project demo video:
![Demo Video](https://github.com/luxass/vsix-utils/raw/HEAD/assets/videos/demo.mp4)

Using HTML video tags:

<video width="720" height="480" controls>
  <source src="https://github.com/luxass/vsix-utils/blob/HEAD/assets/videos/tutorial.mp4" type="video/mp4">
  <source src="https://github.com/luxass/vsix-utils/blob/HEAD/assets/videos/tutorial.webm" type="video/webm">
  Your browser does not support the video tag.
</video>

## External Resources

- [Main Repository](https://github.com/luxass/vsix-utils/blob/HEAD/README.md)
- [Documentation Site](https://docs.example.com)
- [Issue Tracker](https://github.com/luxass/vsix-utils/blob/HEAD/issues/index.md)
- [Team Calendar](https://github.com/luxass/vsix-utils/blob/HEAD/team/calendar)

## Navigation

- [Back to Home](https://github.com/luxass/vsix-utils/blob/HEAD/README.md)
- [Go to Dashboard](https://github.com/luxass/vsix-utils/blob/HEAD/../dashboard/index.md)
- [View Settings](https://github.com/luxass/vsix-utils/blob/HEAD/settings/index.md)

## Component Examples

- [Button Component](https://github.com/luxass/vsix-utils/blob/HEAD/src/components/Button/README.md)
- [Form Elements](https://github.com/luxass/vsix-utils/blob/HEAD/src/components/Form/index.md)
- [Navigation Bar](https://github.com/luxass/vsix-utils/blob/HEAD/src/components/NavBar/documentation.md)

## Additional Resources

For more information, check out these resources:

1. [Developer Blog](https://github.com/luxass/vsix-utils/blob/HEAD/blog/index.md)
2. [Release Notes](https://github.com/luxass/vsix-utils/blob/HEAD/changelog.md)
3. [Security Policy](https://github.com/luxass/vsix-utils/blob/HEAD/SECURITY.md)
4. [License Information](https://github.com/luxass/vsix-utils/blob/HEAD/LICENSE)

---

*Last updated: 2025-01-14*

[Return to top](#project-documentation)
"
`;

exports[`transformMarkdown > transform relative links with custom base URLs 1`] = `
"# Project Documentation

## Getting Started

Please review our [installation guide](https://github.com/luxass/luxass.dev/docs/installation.md) before proceeding to the [quick start tutorial](https://github.com/luxass/luxass.dev/docs/quickstart.md).

Visit our repositories on [GitHub (HTTPS)](https://github.com/example/project) or [GitHub (HTTP)](http://github.com/example/project-mirror).

Check out our [partner projects](https://github.com/luxass/luxass.dev/partners/index.md).

## Project Structure

\`\`\`
project/
├── docs/
│   ├── installation.md
│   └── quickstart.md
├── assets/
│   ├── images/
│   │   └── logo.png
│   └── videos/
│       └── demo.mp4
└── src/
    └── components/
\`\`\`

## Documentation

Our documentation is split into several sections:

- [API Reference](https://github.com/luxass/luxass.dev/docs/api/index.md)
- [Component Library](https://github.com/luxass/luxass.dev/src/components/README.md)
- [Contributing Guidelines](https://github.com/luxass/luxass.dev/CONTRIBUTING.md)
- [Code of Conduct](https://example.com/code-of-conduct)

## Media Examples

### Images

Here's our project logo:
![Project Logo](https://github.com/luxass/luxass.dev/assets/images/logo.png)

Some examples using HTML img tags:

<img src="https://github.com/luxass/luxass.dev/assets/images/screenshot1.png" alt="Screenshot 1" width="600">
<img src="https://github.com/luxass/luxass.dev/assets/images/banner.jpg" alt="Banner" width="800">
<img src="https://example.com/images/team.jpg" alt="Team Photo">

### Videos

Project demo video:
![Demo Video](https://github.com/luxass/luxass.dev/assets/videos/demo.mp4)

Using HTML video tags:

<video width="720" height="480" controls>
  <source src="https://github.com/luxass/luxass.dev/assets/videos/tutorial.mp4" type="video/mp4">
  <source src="https://github.com/luxass/luxass.dev/assets/videos/tutorial.webm" type="video/webm">
  Your browser does not support the video tag.
</video>

## External Resources

- [Main Repository](https://github.com/luxass/luxass.dev/README.md)
- [Documentation Site](https://docs.example.com)
- [Issue Tracker](https://github.com/luxass/luxass.dev/issues/index.md)
- [Team Calendar](https://github.com/luxass/luxass.dev/team/calendar)

## Navigation

- [Back to Home](https://github.com/luxass/luxass.dev/README.md)
- [Go to Dashboard](https://github.com/luxass/luxass.dev/../dashboard/index.md)
- [View Settings](https://github.com/luxass/luxass.dev/settings/index.md)

## Component Examples

- [Button Component](https://github.com/luxass/luxass.dev/src/components/Button/README.md)
- [Form Elements](https://github.com/luxass/luxass.dev/src/components/Form/index.md)
- [Navigation Bar](https://github.com/luxass/luxass.dev/src/components/NavBar/documentation.md)

## Additional Resources

For more information, check out these resources:

1. [Developer Blog](https://github.com/luxass/luxass.dev/blog/index.md)
2. [Release Notes](https://github.com/luxass/luxass.dev/changelog.md)
3. [Security Policy](https://github.com/luxass/luxass.dev/SECURITY.md)
4. [License Information](https://github.com/luxass/luxass.dev/LICENSE)

---

*Last updated: 2025-01-14*

[Return to top](#project-documentation)
"
`;
